# lit-gpt-dev-fiction

./: README.md  pyproject.toml  train.py
launch_configs/fiction/: create_true_val_set.ipynb  launch_ft_runs.py
launch_configs/fiction/data_configs/: tuolumne_train_all_base.json  tuolumne_train_fict_webtext_val_fict_triv_cbqa.json
launch_configs/fiction/data_configs/train_val_splits_0pct/: tuolumne_base_only_all_val.json
launch_configs/fiction/model_configs/: tuolumne_gemma-2-2b.json  tuolumne_gemma-2-9b.json  tuolumne_gemma-2b.json  tuolumne_gemma-7b.json  tuolumne_llama-3-1-8B.json  tuolumne_llama-3-2-1B.json  tuolumne_llama-3-2-3B.json
litgpt/: __init__.py  config.py  data_loading_utils.py  doc_block_utils.py  expand_embeddings.py  generate_base.py  huggingface_dataset.py  init.py  model.py  model_registry.py  model_surrogates.py  monitor.py  norms.py  ops.py  optim.py  packed_cycle_dataset.py  packed_dataset.py  settings.py  slim_adamw.py  tokenizer.py  utils.py
litgpt/data/: base.py  json.py
scripts/: combine_tensor_parallel_checkpoints.py  convert_checkpoint_to_hf.py  convert_hf_checkpoint.py  convert_hf_to_dynamic.py  convert_lit_checkpoint.py  convert_pretrained_checkpoint.py  create_grafted_checkpoint.py  download.py  expand_checkpoint_embeddings.py  hf_generate.py  lit_generate.py  prepare_hf.py  prepare_redpajama.py  prepare_retrieval_data.py  push_to_hub.py  split_hf_dataset.py
scripts/unsupported/: merge_lora.py  prepare_alpaca.py  prepare_csv.py  prepare_dolly.py  prepare_flan.py  prepare_hf_rewrite.py  prepare_lima.py  prepare_longform.py  prepare_openwebtext.py
(+24 files in other folders)
