[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
]
build-backend = "setuptools.build_meta"

requires-python = ">= 3.11"

[project]
name = "lit-gpt-umd"
version = "0.1"
dependencies = [
  "numpy<2.0",
  "einops",
  "lightning==2.3.0.dev20240328",
  "jsonargparse[signatures]>=4.27.6",
  "requests>=2.31.0",
  "tensorboard>=2.14.0",
  "torchmetrics>=1.3.1",
  "lm-eval>=0.4.2",
  "wandb",
  "sentencepiece>=0.2.0",
  "tokenizers>=0.15.2",
  "safetensors>=0.4.3",
  "datasets>=2.18.0",
  "transformers>=4.38.0",
  "axonn@git+https://github.com/axonn-ai/axonn@c5ef65d3d4f329c20292a2d26681e8d9cbcccecf",
  "packaging",
  "ninja"
]

[project.optional-dependencies]
# toggling between different torch versions
torch221 = ["torch==2.2.1"]
torchgte240 = ["torch>=2.4.0"]

# only for testing
dev = [
  "pytest",
  "pytest-rerunfailures",
  "pytest-timeout",
  "transformers>=4.38.0",
  "einops",
  "protobuf",
  "docstring_parser",
  "lightning-cloud",
]

# only for data preproc
data = [
  "litdata>=0.2.2",
  "requests",
  "zstandard",
  "pandas",
  "pyarrow",
]

quant = [
  "bitsandbytes==0.42.0",
  "scipy",
]

[tool.setuptools.packages.find]
include = [
    "litgpt",
    "litgpt.*",
    "scripts"
]
exclude = []

[tool.setuptools.package-data]
litgpt = [
    "LICENSE",
    "README.md",
]

[tool.black]
line-length = 120

[tool.pyright]
include = ["litgpt"]
exclude = ["**/__pycache__", "**/*ipynb*"]

pythonVersion = "3.11"
pythonPlatform = "Linux"
# ignores
reportPrivateImportUsage = false
reportIncompatibleMethodOverride = false
typeCheckingMode = "basic"
